# geometric-server

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
proto/: geometric.proto
src/: impl.rs  lib.rs  main.rs
src/proto/: geometric.rs  mod.rs
